# aaura-w3-strawb

./: .gitignore  Cargo.toml  LICENSE.md  README.md  assign-ids.py  build.rs  default.nix  flake.nix  overlay.nix  push.sh  run.sh
markdown/: contact.md  find-billy.md  license.md  services.md
markdown/art/ak47/: index.md
markdown/art/city-block/: index.md
markdown/art/flowers/: index.md
markdown/art/hexagonal-prism-wallpaper/: index.md
markdown/art/honda-sports-ev/: index.md
markdown/art/lettuce-synthetic/: index.md
markdown/art/lyrically-vantage/: index.md
markdown/art/nilgans/: index.md
markdown/art/nixos-3d-showcase/: index.md
markdown/art/obama-prism/: index.md
markdown/art/reverb-ambience/: index.md  reverb-ambience.mmpz
markdown/art/rg-host-of-le-b-edroom/: index.md
markdown/art/rover/: index.md
markdown/art/totebot/: index.md
markdown/art/video-game-nostalgia/: index.md
markdown/art/viking/: index.md
markdown/blog/: starship-velociraptor-an-amazing-album.md
markdown/blog/csd-berlin-2023/: index.md
markdown/blog/i-bought-a-thinkpad/: index.md
markdown/blog/linux-network-namespacing-and-wireguard/: index.md
modules/: aaura-w3-strawb.nix
pkgs/: aaura-w3-strawb.nix
pkgs/aaura-w3-strawb-overlay/: Compatible with Adobe RGB (1998).icc  default.nix  process.py
src/: base.rs  etag.rs  feeds.rs  footer.rs  header.rs  linux_journey.rs  main.rs  markdown.rs
static/: global.css  linux-journey.json  local-post-date.js  xenia_icon.avif
static-src/: xenia_icon.xcf
static-src/backgrounds/: bubbles.blend
