[package]
name = "annaaurora-eu-cranberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "annaaurora-eu-cranberry"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.4", features = ["http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing"] }
chrono = { version = "0.4.34", features = ["serde"] }
fontconfig = "0.8.0"
maud = { version = "0.26.0", features = ["axum"] }
pulldown-cmark = "0.9.6"
pulldown-cmark-frontmatter = "0.2.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slug = "0.1.5"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml = "0.8.10"
tower-http = { version = "0.5.1", features = ["fs"] }
