[package]
name = "aaura-w3-strawb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aaura-w3-strawb"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "0.18.1"

[dependencies]
axum = { version = "0.7.4", features = ["http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing"] }
axum-macros = "0.4.1"
base64 = "0.22.0"
chrono = { version = "0.4.34", features = ["serde"] }
fontconfig = "0.8.0"
http = "1.0.0"
indexmap = "2.2.6"
lazy_static = "1.4.0"
maud = { version = "0.26.0", features = ["axum"] }
notify = "6.1.1"
pulldown-cmark = "0.9.6"
pulldown-cmark-frontmatter = "0.2.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde-email = "3.0.1"
serde_json = "1.0.114"
slug = "0.1.5"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml = "0.8.10"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "catch-panic", "compression-zstd", "compression-gzip", "compression-br", "set-header"] }
urlencoding = "2.1.3"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
